# napari-mm3

./: .gitignore  LICENSE  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: Cell-class-docs.md  ChannelPicker-guide.md  Compile-guide.md  Input-images-guidelines.md  Segment-guide.md  Subtract-guide.md  Track-guide.md  annotate-widget.md  colors-widget.md  compile-widget.md  file-structure.md  foci-widget.md  index.md  nd2ToTIFF-guide.md  nd2totiff-widget.md  pickchannels-widget.md  segmentotsu-widget.md  segmentunet-widget.md  subtract-widget.md  tiffconvert-widget.md  track-widget.md  trainunet-widget.md  user-manual.md
notebooks/: fig4_plots.ipynb  napari_mm3_analysis_template.ipynb  train_Unet_from_GUI.ipynb  unet_helpers.py
src/napari_mm3/: __init__.py  _annotate.py  _channel_picker.py  _colors.py  _compile.py  _deriving_widgets.py  _dock_widget.py  _foci.py  _foci_picking.py  _function.py  _mm3_helpers.py  _nd2_to_tiff.py  _reader.py  _segment_otsu.py  _segment_unet.py  _subtract.py  _tiff_converter.py  _track.py  _train_unet.py  _writer.py  mm3_ChannelPicker.py  mm3_Compile.py  mm3_Segment-Unet.py  mm3_Subtract.py  mm3_helpers.py  mm3_nd2ToTIFF.py  napari.yaml  ryan-script.py  track_new.py  utils.py  utils_plotting.py
src/napari_mm3/_tests/: test_dock_widget.py  test_function.py  test_placeholder.py  test_reader.py  test_writer.py
