[metadata]
name = napari-mm3
version = 0.0.8
author = Gursharan Ahir, Michael Sandler, Ryan Thiermann 
author_email = ryan.thiermann@gmail.com
url = https://github.com/junlabucsd/napari-mm3
license = BSD-3-Clause
description = a plugin for mother machine image analysis
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Framework :: napari
	Topic :: Software Development :: Testing
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
project_urls =
	Bug Tracker = https://github.com/ahirsharan/napari-mm3/issues
	Documentation = https://github.com/ahirsharan/napari-mm3#README.md
	Source Code = https://github.com/ahirsharan/napari-mm3
	User Support = https://github.com/ahirsharan/napari-mm3/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
	=src
# add your package requirements here
install_requires =
	napari-plugin-engine>=0.1.4
	numpy
	h5py
	tifffile==2021.11.2
	scikit-learn
	scikit-image
	tensorflow
	pims-nd2
	seaborn
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
	napari-mm3 = napari_mm3:napari.yaml

[options.package_data]
napari_mm3 = napari.yaml
